--- a/.drone.yml
+++ b/.drone.yml
@@ -3,4 +3,8 @@ build:
   commands:
     - env
     - curl https://api.ciscospark.com/v1/messages -X POST -H "Authorization:Bearer $$SPARK_TOKEN" --data "roomId=$$SPARK_ROOM" --data "text=Drone kicking off build $CI_BUILD_NUMBER"
-
+  run_tests:
+        image: python:2-alpine
+        commands:
+            - pip install -r requirements.txt
+            - python testing.py
